# Food101_MLOps

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  todo.txt
.github/workflows/: ci.yml
docker/: Dockerfile.jupyter  Dockerfile.serve  Dockerfile.train
inference_api/: config.yaml  main.py
inference_api/inference/: loader.py
notebooks/: Food-101_CNN-prototype.ipynb  Subset_Food-101_generator.ipynb
platform/docker/: Dockerfile.jupyter  Dockerfile.mlflow  Dockerfile.serve  Dockerfile.train
platform/infrastructure/: docker-compose.gpu.yml  docker-compose.yml
src/: cli.py  config.yaml
src/data/: dataloader.py
src/evaluation/: crossval_score.py  plots.py
src/models/: food101.py  food101_0.py
src/serving/: onnx_registry.py
src/training/: __init__.py  engine.py  train.py
src/utils/: paths.py
tests/: conftest.py
tests/integration/: conftest.py  test_inference_api.py  test_training_pipeline.py
tests/unit/: test_data_dataloader.py  test_evaluation_plots.py  test_training_engine.py  test_utils_paths.py
